[package]
name = "mqtt-async-client"
version = "0.2.0"
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "An MQTT 3.1.1 client written in Rust, using async functions and tokio."
repository = "https://github.com/fluffysquirrels/mqtt-async-client-rs"

[dependencies]
bytes = "0.4.0"
futures-core = "0.3.1"
futures-util = "0.3.1"
http = "0.2.4"
log = "0.4.8"
maplit = "1.0.2"
mqttrs = "0.2.0"
rustls = { version = "0.19.0", optional = true }
tokio = { version = "1.2.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.22.0", optional = true }
tokio-tungstenite = { version = "0.14", optional = true }
tungstenite = { version = "0.13", optional = true }

[dev-dependencies]
env_logger = "0.7.1"
structopt = "0.3.5"
webpki-roots = "0.18.0"

[features]
default = ["tls", "websocket"]
tls = ["rustls", "tokio-rustls"]
websocket = ["tungstenite", "tokio-tungstenite"]
unsafe-logging = []
