[package]
name = "mqtt-async-client"
version = "0.4.0"
authors = ["Alex Helfet <alex.helfet@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
description = "An MQTT 3.1.1 client written in Rust, using async functions and tokio."
repository = "https://github.com/fluffysquirrels/mqtt-async-client-rs"

[dependencies]
bytes = "0.5" # Compatibility with mqttrs
futures-core = "0.3.1"
futures-util = "0.3.1"
log = "0.4.8"
maplit = "1.0.2"
mqttrs = "0.3"
url = "2.2.2"
rustls = { version = "0.20", optional = true }
rustls-native-certs = { version = "0.6", optional = true }
http = { version = "0.2.4", optional = true }
tokio = { version = "1.2.0", features = ["io-util", "macros", "net", "rt", "rt-multi-thread", "sync", "time"] }
tokio-rustls = { version = "0.23", optional = true }
tokio-tungstenite = { version = "0.16", optional = true, features = ["rustls-tls-native-roots"] }

[dev-dependencies]
env_logger = "0.9"
structopt = "0.3.5"
rustls-pemfile = "0.2"

[features]
default = ["tls"]
tls = ["rustls", "rustls-native-certs", "tokio-rustls"]
websocket = ["tokio-tungstenite", "http", "tls"]
unsafe-logging = []
